--- a/lakke.cabal
+++ b/lakke.cabal
@@ -25,6 +25,7 @@ executable lakke
                        Interpreter.EvalMonad
                        Interpreter.Program
                        Interpreter.Values
+                       Interpreter.Utils
                        LexLakke
                        ParLakke
                        PrintLakke
@@ -41,5 +42,7 @@ executable lakke
                ,       containers
                ,       vector
                ,       lens
+               ,       pretty-terminal
+               ,       pretty-simple
   hs-source-dirs:      src, generated, .
   default-language:    Haskell2010
