more work on typechecker v2

--- a/lakke.cabal
+++ b/lakke.cabal
@@ -42,6 +42,7 @@ executable lakke
                        Typechecker.Statements
                        Typechecker.Typecheck
                        Typechecker.TypecheckMonad
+                       Typechecker.EnvironmentUtils
   -- other-extensions:
   build-depends:       base >=4.11
                ,       mtl
