--- a/lakke.cabal
+++ b/lakke.cabal
@@ -3,7 +3,7 @@ cabal-version:       >=1.10
 -- For further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                lakke
-version:             0.0.0.1-dev
+version:             1.0.0.0
 -- synopsis:
 -- description:
 -- bug-reports:
@@ -51,7 +51,5 @@ executable lakke
                ,       array
                ,       containers
                ,       lens
-               ,       pretty-terminal
-               ,       pretty-simple
   hs-source-dirs:      src, generated, .
   default-language:    Haskell2010
